# prec-bsl

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  README.md
crates/prec-bsl-bsl/: Cargo.toml
crates/prec-bsl-config/: Cargo.toml
crates/prec-bsl-git/: Cargo.toml
crates/prec-bsl-output/: Cargo.toml
crates/prec-bsl-pipeline/: Cargo.toml
crates/prec-bsl-pipeline/src/: lib.rs  model.rs  registry.rs  runner.rs  tests.rs
crates/prec-bsl-platform/: Cargo.toml
crates/prec-bsl-scenarios/: Cargo.toml
crates/prec-bsl-source/: Cargo.toml
spec/: IMPLEMENTATION_TODO.md  configuration.md  parser-strategy.md  prd-prec-bsl.md  reference-scenario-inventory.md  release-readiness-checklist.md  testing-strategy.md
src/: app.rs  bsl_checkers.rs  cli.rs  composition_sort.rs  config.rs  duplicate_metadata.rs  external_artifacts.rs  form_change_permission.rs  full_text_search.rs  git_index.rs  lib.rs  main.rs  metadata_sync.rs  output.rs  scenario_pipeline.rs  scenarios.rs  source_files.rs  text_checkers.rs  text_fixers.rs  unit_tests_processing.rs  xml_edt.rs  xml_forms.rs
tests/: canonical_spelling.rs  composition_sort.rs  copyright.rs  disable_form_change.rs  disable_full_text_search.rs  duplicate_metadata.rs  duplicate_methods.rs  empty_lines.rs  exec_rules.rs  external_artifacts.rs  fixture_harness.rs  goto.rs  keyword_spacing.rs  metadata_sync.rs  precommit4onec_reference.rs  prek_hook.rs  preprocessor.rs  profanity.rs  rat_acceptance.rs  regions.rs  trailing_whitespace.rs  unit_tests_processing.rs  xml_edt.rs  xml_forms.rs
tests/support/: fixtures.rs  (+1 more)
(+65 files in other folders)
